fb-contrib: CSI